# Zogents

./: .gitignore  README.md  main.py  pyproject.toml  sitemap.xml
config/: config.toml.example
src/: config.py  dify_knowledge_base.py  main.py  qdrant.py  zdb.py
src/agents/: demo.py
src/dify_rag/: dify_knowledge_base.py
src/docling/: demo.py  pdf_parsing.py
src/handler/: dify_knowledge_base.py  zotero_database.py
src/parse/: api_requests.py  pdf_parsing.py  pipeline.py  tables_serialization.py
src/pipeline/: files2dify.py  zdb2dify.py
src/pipelines/: files2dify.py  zdb2dify.py
src/zotero/: connection_zotero.py  zdb.py  zolocal.py
tests/: example_item.json  test_dify_knowledge_base.py  test_files2dify_pipeline.py  test_zdb2dify_pipeline.py
