[project]
name = "Zogents"
version = "0.0.1"
description = "Zogents is an AI agent built with agno to interact with Zotero."
authors = [
    {name = "AdamZh0u", email = "zhouzz400@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno>=1.4.6",
    "cairosvg>=2.7.1",
    "jupyterlab>=4.3.5",
    "loguru>=0.7.3",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "openai>=1.78.1",
    "pandas>=2.2.3",
    "pillow>=10.4.0",
    "pyzotero>=1.6.11",
    "scikit-learn>=1.6.1",
    "tqdm>=4.67.1",
    "whoosh>=2.7.4",
    "yfinance>=0.2.61",
    "zolocal>=0.2.0",
]

[dependency-groups]
# https://docs.astral.sh/uv/concepts/projects/dependencies/#dependency-groups
# uv add --group dev pytest
# uc sync --group docs
dev = [
    "httpretty>=1.1.4",
    "pre-commit>=4.1.0",
    "pytest>=8.3.5",
    "python-dateutil>=2.9.0.post0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.1",
    "mkdocs-material[imaging]>=9.6.7",
    "mkdocs-section-index>=0.3.9",
    "mkdocstrings-python>=1.16.2",
]

# [build-system]
# requires = ["uv"]
# build-backend = "uv"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$major.$minor.$patch$prerelease"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true

[tool.uv]
cache-dir = "E:\\.uv_cache" # 缓存目录 需要在同一个硬盘
